<resources>
    <string name="app_name" translatable="false">School Day</string>
    <string name="downloads">Downloads</string>
    <string name="fees">Fees</string>
    <string name="teacher">Teacher</string>
    <string name="subject">Subject</string>
    <string name="notes">Notes</string>
    <string name="online_learning">Online Learning</string>
    <string name="exams">Exam</string>
    <string name="library">Library</string>
    <string name="activity">Activity</string>
    <string name="attendance">Attendance</string>
    <string name="bus">Bus</string>
    <string name="assignment">Assignment</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open" translatable="false">open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="timetable">Timetable</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="create_group">Create Group</string>
    <string name="online">online</string>
    <string name="chat_with_friends">Chat with friends</string>
    <string name="go_back">Go back</string>
    <string name="edit">Edit</string>
    <string name="moresetting">More Setting</string>
    <string name="title">Title</string>
    <string name="noteDescription">Note Description</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="student">Student</string>
    <string name="payroll">Payroll</string>
    <string name="acadimic_year">Acadmic Year </string>
    <string name="selectClass">SelectClass</string>
    <string name="attendanceDate">Attendance Date</string>
    <string name="uploadchapter">Upload Chapter</string>
    <string name="Chapter_Number">Chapter Namber</string>
    <string name="uploadphoto">Upload Photo</string>
    <string name="searchByName">Search By Name</string>
    <string name="searchById">Search By Id</string>
    <string name="name">Name</string>
    <string name="attendcestatus">Attendance Status</string>
    <string name="rate">Rate</string>
    <string name="uploadexam">Upload Exam</string>
    <string name="nameofexam">Exam Name</string>
    <string name="opened">Opened</string>
    <string name="online_assignmet">Online Assignment</string>
    <string name="PDFAssignmet">PDF Assignment</string>
    <string name="nameofAssignemt">Name of Assignmet</string>
    <string name="grade">Grade</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_Password">Confirm Password</string>
    <string name="parent">Parent</string>
    <string name="signup">Signup</string>
    <string name="haveaccount">Already have an account.</string>
    <string name="login">Login</string>
    <string name="completing">continue</string>
    <string name="first_phone_number">First Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="national_id">National ID</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="congratulation">Congratulation</string>
    <string name="complete_signUp">Complete SignUp</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="error">Error</string>
    <string name="password_error">Password is not the same or Password should be 8 char or more</string>
    <string name="ok">OK</string>
    <string name="email_error">Email is not valid</string>
    <string name="empty_fields">You must fill all fields</string>
    <string name="phone_error">Phone Number is not correct</string>
    <string name="national_error">NationalID must be 18 number</string>
    <string name="note_title">Title</string>
    <string name="note_content">Take your note here....</string>
    <string name="save_note">Save</string>
    <string name="empty_erro">Title or Content can not be empty</string>
    <string name="middleName">Middle Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="licence_id">License Id</string>
    <string name="exam_last_resualt">Last Resualt</string>
    <string name="exam_title">Exam Title</string>
    <string name="exam_degree">Exam Degree</string>
    <string name="year">Year</string>

</resources>