<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bauhaus93"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="50sp"></TextView>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:src="@drawable/lms"></ImageView>


    <EditText
        android:id="@+id/signup_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        android:textColorHint="#000"
        android:textSize="20sp"></EditText>

    <EditText
        android:id="@+id/signup_mail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        android:textColorHint="#000"
        android:textSize="20sp"></EditText>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_padlock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        android:textColorHint="#000"
        android:textSize="20sp"></EditText>

    <EditText
        android:id="@+id/signup_confirmpassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_padlock"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        android:textColorHint="#000"
        android:textSize="20sp"></EditText>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_student"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:paddingLeft="5dp"
            android:text="@string/student"
            android:textColor="#000"
            android:textSize="16sp"></RadioButton>

        <RadioButton
            android:id="@+id/radio_parent"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:paddingLeft="10dp"
            android:text="@string/parent"
            android:textColor="#000"
            android:textSize="16sp"></RadioButton>

        <RadioButton
            android:id="@+id/radio_teacher"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/radio_selector"
            android:button="@color/transparent"
            android:paddingLeft="5dp"
            android:text="@string/teacher"
            android:textColor="#000"
            android:textSize="16sp"></RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/signup_compliting_info"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_button_signup"
        android:text="@string/completing"
        android:textColor="@android:color/white"
        android:textSize="20sp"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            android:text="@string/haveaccount"
            android:textColor="#000"
            android:textSize="15sp"></TextView>

        <TextView
            android:id="@+id/moveto_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/login"
            android:textColor="#F86132"
            android:textSize="15sp"></TextView>
    </LinearLayout>

</LinearLayout>