<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teacher.AttendanceTeacherFragment"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bauhaus93"
        android:textSize="35sp"
        android:gravity="center"
        android:text="@string/student" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acadimic_year"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginRight="20dp"></TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/acadimic_year_spinner"></Spinner>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectClass"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginRight="40dp"></TextView>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/select_class_spinner"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendanceDate"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginRight="40dp"></TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_calendar"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                ></ImageView>
        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="date"
        android:textColor="#000"
        android:textSize="14sp"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByName"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"></TextView>
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            ></SearchView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchById"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"></TextView>
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            ></SearchView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="id"
            android:textSize="14sp"
            android:textColor="#53B1A2"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#53B1A2"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textSize="14sp"
            android:textColor="#53B1A2"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/attendcestatus"
            android:textSize="14sp"
            android:textColor="#53B1A2"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"></TextView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="14sp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"></TextView>
        <RatingBar
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></RatingBar>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="100dp">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ProgressBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textSize="10sp"
                android:layout_centerInParent="true"></TextView>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>