<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".student.notepackage.NotesEditActivity">

    <LinearLayout
        android:id="@+id/linear_edit_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/note_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="#fff"></EditText>

        <EditText
            android:id="@+id/note_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="top"
            android:hint="@string/noteDescription"
            android:inputType="textMultiLine"
            android:textColorHint="#fff"></EditText>
    </LinearLayout>

    <!--

    <LinearLayout
        android:id="@+id/linear_add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:id="@+id/note_title_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#548"
            android:gravity="center"></EditText>

        <EditText
            android:id="@+id/note_description_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#548"
            android:gravity="top"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:textStyle="bold"
        android:visibility="invisible"></Button>
    -->

    <Button
        android:id="@+id/update_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/update"
        android:textStyle="bold"
        ></Button>
</RelativeLayout>